# BIE

./: DEPLOYMENT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bie/: __init__.py  cli.py  client.py  config.py  index.py  models.py  quicksearch.py  server.py
bie/agents/: __init__.py
bie/api/: __init__.py
bie/auth/: __init__.py
bie/compliance/: __init__.py
bie/context/: __init__.py
bie/contradiction/: __init__.py
bie/crawler/: __init__.py
bie/gateway/: __init__.py
bie/indexer/: __init__.py
bie/kg/: __init__.py
bie/mcp/: server.py
bie/regions/: __init__.py
bie/retriever/: __init__.py
bie/trust/: __init__.py
bie/verifier/: __init__.py
bitsearch_intelligence_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
examples/: basic_search.py  quickstart.py
tests/: test_bie.py  test_bie_v1.py
