[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "bits-bie"
version = "0.3.0"
description = "BitSearch Intelligence Engine — real-time, citation-backed web search & extraction for AI apps. Built on Bitscrape."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
{ name = "Sudharsan SM" }
]

keywords = [
"search",
"rag",
"llm",
"ai-agents",
"web-crawler",
"scraping",
"mcp",
"model-context-protocol",
"bitscrape",
"information-retrieval"
]

classifiers = [
"Development Status :: 4 - Beta",
"Intended Audience :: Developers",
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Topic :: Internet :: WWW/HTTP :: Indexing/Search",
"Topic :: Software Development :: Libraries :: Python Modules",
"Topic :: Text Processing :: Indexing",
"Framework :: AsyncIO",
"Typing :: Typed"
]

dependencies = [
"bitscrape>=0.1.6",
"pydantic>=2.0",
"pydantic-settings>=2.0",
"click>=8.0"
]

[project.optional-dependencies]

embeddings = [
"sentence-transformers>=2.2"
]

server = [
"fastapi>=0.110",
"uvicorn[standard]>=0.27"
]

mcp = [
"mcp>=1.0"
]

all = [
"sentence-transformers>=2.2",
"fastapi>=0.110",
"uvicorn[standard]>=0.27",
"mcp>=1.0"
]

dev = [
"pytest>=8.0",
"pytest-asyncio>=0.23",
"pytest-cov>=5.0",
"ruff>=0.4",
"mypy>=1.9",
"build>=1.0",
"twine>=5.0"
]

[project.scripts]
bie = "bie.cli:main"

[project.urls]
Homepage = "https://github.com/Sudharsansm/BIE"
Documentation = "https://github.com/Sudharsansm/BIE#readme"
Repository = "https://github.com/Sudharsansm/BIE"
Issues = "https://github.com/Sudharsansm/BIE/issues"
Changelog = "https://github.com/Sudharsansm/BIE/releases"
"Bitscrape (core crawler)" = "https://github.com/Sudharsansm/Bitscrape"

[tool.hatch.build.targets.wheel]
packages = ["bie"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["bie"]
omit = [
"tests/*",
"examples/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 40
